Reduce Optional abuse